# notherworld

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  vercel.json
.claude/: launch.json
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: afterhours.rs  agency.rs  atlasprobe.rs  block.rs  breaktest.rs  canon.rs  cityprobe.rs  collapse.rs  compactprobe.rs  cosmos.rs  dive.rs  dragon.rs  explore.rs  ferry.rs  ffidemo.rs  fieldprobe.rs  flowprobe.rs  focus.rs  geoprobe.rs  interior.rs  islandprobe.rs  ledger.rs  lifetime.rs  live.rs  lodaudit.rs  logprobe.rs  main.rs  mega.rs  metro.rs  multiverse.rs  oracle.rs  packprobe.rs  partlab.rs  pathprobe.rs  play.rs  pond.rs  regime.rs  rooftest.rs  saga.rs  school.rs  (+9 more)
docs/: AUTHORING.md  EMBED.md  ENGINE.md  LEDGER.md  PLANET_TEMPLATES.md  TEMPLATE_CATALOG.md
embed/c/: host.c
embed/csharp/: OwosHost.cs
engine/owos-author/: Cargo.toml
engine/owos-author/src/: lib.rs
engine/owos-author/tests/: guards.rs  worlds_build.rs
engine/owos-core/: Cargo.toml
engine/owos-core/src/: agent.rs  diff.rs  dynamics.rs  event.rs  kit.rs  lib.rs  library.rs  rng.rs  seed.rs  sim.rs  spec.rs  time.rs  village.rs  world.rs
engine/owos-core/src/engine/: action.rs  canon.rs  entity.rs  expr.rs  flow.rs  graph.rs  mod.rs  scale.rs  system.rs  world.rs
engine/owos-core/tests/: expr.rs
engine/owos-ffi/: Cargo.toml
engine/owos-ffi/include/: owos.h
engine/owos-ffi/src/: lib.rs
engine/owos-wasm/: Cargo.toml
engine/owos-wasm/src/: lib.rs
studio/: .env.example  README.md  about.html  bestiary.html  bm.mjs  city.html  drop.html  fish.html  how.html  hunt.html  index.html  lab.html  nother.html  notherspace.html  package-lock.json  package.json  parts.html  proofs.html  studio.html  temple.html  terra.html  vite.config.ts
studio/src/: App.tsx  builder.tsx  console.css  help.tsx  index.css  main.tsx  owos.ts  preview.tsx  spec.ts
studio/src/about/: About.tsx  about.css  main.tsx
studio/src/bestiary/: Bestiary.tsx  bestiary.css  main.tsx
studio/src/city/: BlockMap.tsx  CityDemo.tsx  CityMap.tsx  city.css  layout.ts  main.tsx
studio/src/design/: Starfield.tsx  creature.ts  pixel.css
studio/src/drop/: Drop.tsx  drop.css  main.tsx
studio/src/fish/: Fish.tsx  main.tsx
studio/src/game/: ShipPanel.tsx  ship.ts
studio/src/home/: Home.tsx  home.css  main.tsx
studio/src/how/: How.tsx  how.css  main.tsx
studio/src/hunt/: Hunt.tsx  hunt.css  main.tsx
studio/src/lab/: PartitionLab.tsx  lab.css  main.tsx
studio/src/nother/: Nother.tsx  main.tsx  nother.css
studio/src/notherspace/: Notherspace.tsx  main.tsx  notherspace.css
studio/src/owos/: owos_wasm.d.ts  owos_wasm.js  owos_wasm_bg.wasm  owos_wasm_bg.wasm.d.ts  package.json
studio/src/parts/: Parts.tsx  main.tsx  parts.css
studio/src/proofs/: Proofs.tsx  main.tsx  proofs.css
studio/src/shelltemps/: hud.tsx  markTarget.ts  reticle.ts  simLoop.ts  smoothPool.ts  statFlash.ts
studio/src/temple/: Temple.tsx  main.tsx  templates.ts  temple.css
studio/src/terra/: Terra.tsx  main.tsx  terra.css  world.json
studio/src/view/: facts.ts  hash.ts  lexicon.ts  scope.ts  voronoi.ts
studio/src/worlds/: city.json  hunt.json  meridian.json  shore.json
worlds/: README.md  afterhours.json  arena.json  bestiary.json  block.json  citylife.json  cosmos.json  craft.json  duel.json  emberhold.json  ferry.json  guild.json  hotel.json  hunt2.json  kitchen.json  life.json  lifetime.json  market.json  metropolis.json  mood.json  mood2.json  planet.json  pond.json  probe_item.json  probe_pick.json  probe_target.json  probe_time.json  regime.json  saga.json  saltmarsh.json  school.json  station.json  tavern.json  trade.json  verang.json
worlds/packs/: README.md  compose.mjs  hunt.manifest.json  pack_clock.json  pack_commons.json  pack_flight.json  pack_individuals.json  pack_lure.json  pack_stalker.json  pack_wind_alarm.json  shore.manifest.json
worlds/probes/: probe_diffuse.json  probe_diffuse2.json  probe_event_vs_action.json  probe_hunt.json  probe_space.json
